a lot more design

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,8 +1,14 @@
 @import './variables.css';
 
+:root {
+  --base-font-family: "Figtree", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --code-font-family: "Source Code Pro", "Courier New", Courier, monos
+}
+
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: var(--base-font-family);
 }
 
 html, body {
@@ -11,9 +17,11 @@ html, body {
   color: var(--text-body);
 }
 
-h1, h2, h3, h4, h5 {
-  font-family: "Figtree", "Helvetica Neue", Helvetica, Arial, sans-serif;
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--base-font-family);
   margin: 0;
+  padding: 0;
+  letter-spacing: 0;
   color: var(--text-primary);
 }
 
@@ -41,6 +49,21 @@ h4 {
   font-weight: var(--heading-h4-font-weight);
 }
 
-code {
+h5 {
+  font-size: var(--heading-h5-font-size);
+  line-height: var(--heading-h5-line-height);
+  font-weight: var(--heading-h5-font-weight);
+}
+
+h6 {
+  font-size: var(--heading-h6-font-size);
+  line-height: var(--heading-h6-line-height);
+  font-weight: var(--heading-h6-font-weight);
+  letter-spacing: var(--heading-h6-letter-spacing);
+  color: var(--text-tertiary);
+  text-transform: uppercase;
+}
+
+code, pre {
   font-family: "Source Code Pro", "Courier New", Courier, monospace !important;
 }
