--- a/src/css/hub.css
+++ b/src/css/hub.css
@@ -1,3 +1,18 @@
+:root {
+  --hub-intro-image-display: block;
+  --hub-index-container-width: calc((100% - 3rem) / 3);
+  --hub-index-container-margin-top: 2rem;
+  --hub-index-container-padding: 1rem 0;
+}
+@media (max-width: 768px) {
+  :root {
+    --hub-intro-image-display: none;
+    --hub-index-container-width: 100%;
+    --hub-index-container-margin-top: 0;
+    --hub-index-container-padding: 0;
+  }
+}
+
 .site-content,
 .fixed-toolbar .site-content {
   &[data-is-hub="true"] {
@@ -27,9 +42,9 @@
         div.itemizedlist.index-container {
           display: flex;
           flex-direction: column;
-          width: calc((100% - 3rem) / 3);
-          margin-top: 2rem;
-          padding: 1rem 0;
+          width: var(--hub-index-container-width);
+          margin-top: var(--hub-index-container-margin-top);
+          padding: var(--hub-index-container-padding);
 
           h2 {
             padding: 0.75rem 0;
@@ -155,14 +170,14 @@
               .bitbutton:nth-child(2) {
                 color: var(--button-secondary-fg);
                 background-color: var(--button-secondary-bg);
-                border: 1px solid var(--button-secondary-border);
+                border: var(--button-secondary-border);
 
                 &:hover {
-                  border: 1px solid var(--button-secondary-border-hover);
+                  border: var(--button-secondary-border-hover);
                   background: var(--button-secondary-bg-hover);
                 }
                 &:active {
-                  border: 1px solid var(--button-secondary-border-active);
+                  border: var(--button-secondary-border-active);
                   background: var(--button-secondary-bg-active);
                 }
               }
@@ -171,6 +186,7 @@
 
           .homepage-image {
             margin-left: auto;
+            display: var(--hub-intro-image-display);
 
             img {
               max-width: none;
