--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,11 +1,19 @@
 :root {
   --sidebar-width: 320px;
+  --sidebar-display: block;
+}
+@media (max-width: 768px) {
+  :root {
+    --sidebar-width: 0;
+    --sidebar-display: none;
+  }
 }
 
 .site-body .site-sidebar {
   width: var(--sidebar-width);
   float: none;
   height: 100vh !important;
+  display: var(--sidebar-display);
 
   & .site-sidebar-header {
     height: var(--header-height);
