--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -2,24 +2,6 @@
 
   /* -------- Color Palette -------- */
 
-  --pal-green-50: #2a9d4c;
-
-  --pal-orange-50: #d45202;
-
-  --pal-blue-50: #2582d0;
-  
-  --pal-yellow-50: #b27e00;
-
-  --pal-purple-95: #f9f2fd;
-  --pal-purple-93: #f3e7f9;
-  --pal-purple-90: #ead4f2;
-  --pal-purple-70: #c289e6;
-  --pal-purple-50: #9247c2;
-  --pal-purple-40: #7b3ba5;
-  --pal-purple-30: #5c2a7e;
-  --pal-purple-20: #421560;
-  --pal-purple-10: #2b0e3f;
-
   --pal-neutral-100: #ffffff;
   --pal-neutral-95: #f6f4f6;
   --pal-neutral-93: #efebef;
@@ -31,98 +13,410 @@
   --pal-neutral-40: #6b6071;
   --pal-neutral-10: #201b22;
 
+  --pal-purple-95: #f9f2fd;
+  --pal-purple-93: #f3e7f9;
+  --pal-purple-90: #ead4f2;
+  --pal-purple-80: #d5adeb;
+  --pal-purple-70: #c289e6;
+  --pal-purple-60: #ae63de;
+  --pal-purple-50: #9247c2;
+  --pal-purple-40: #7b3ba5;
+  --pal-purple-30: #5c2a7e;
+  --pal-purple-20: #421560;
+  --pal-purple-10: #2b0e3f;
+
+  --pal-blue-95: #ecf8fd;
+  --pal-blue-93: #def2fc;
+  --pal-blue-90: #c2e7fa;
+  --pal-blue-80: #99d1f5;
+  --pal-blue-70: #71b8ef;
+  --pal-blue-60: #4f9bde;
+  --pal-blue-50: #2582d0;
+  --pal-blue-40: #1f6bb8;
+  --pal-blue-30: #044781;
+  --pal-blue-20: #00315c;
+  --pal-blue-10: #002442;
+
+  --pal-turquoise-95: #e9fbf9;
+  --pal-turquoise-93: #d8f8f4;
+  --pal-turquoise-90: #aeefe8;
+  --pal-turquoise-80: #8ae0d7;
+  --pal-turquoise-70: #55cec3;
+  --pal-turquoise-60: #11bba9;
+  --pal-turquoise-50: #009e8e;
+  --pal-turquoise-40: #007366;
+  --pal-turquoise-30: #005248;
+  --pal-turquoise-20: #003d36;
+  --pal-turquoise-10: #002924;
+
+  --pal-green-95: #eef9f1;
+  --pal-green-93: #e1f4e7;
+  --pal-green-90: #c3eace;
+  --pal-green-80: #a1deb2;
+  --pal-green-70: #77cf8f;
+  --pal-green-60: #4eb76c;
+  --pal-green-50: #2a9d4c;
+  --pal-green-40: #167231;
+  --pal-green-30: #0b5620;
+  --pal-green-20: #064217;
+  --pal-green-10: #042a0f;
+
+  --pal-yellow-95: #fff6d1;
+  --pal-yellow-93: #ffefad;
+  --pal-yellow-90: #fbe074;
+  --pal-yellow-80: #f9cc15;
+  --pal-yellow-70: #ebba00;
+  --pal-yellow-60: #d6a200;
+  --pal-yellow-50: #b27e00;
+  --pal-yellow-40: #875b00;
+  --pal-yellow-30: #613e00;
+  --pal-yellow-20: #4d2f00;
+  --pal-yellow-10: #2e1c00;
+
+  --pal-orange-95: #fff4e5;
+  --pal-orange-93: #ffe9cf;
+  --pal-orange-90: #ffd5a3;
+  --pal-orange-80: #ffb766;
+  --pal-orange-70: #fd9730;
+  --pal-orange-60: #ed720c;
+  --pal-orange-50: #d45202;
+  --pal-orange-40: #a33500;
+  --pal-orange-30: #7a2200;
+  --pal-orange-20: #661900;
+  --pal-orange-10: #421000;
+
+  --pal-red-95: #fff0f3;
+  --pal-red-93: #ffe5eb;
+  --pal-red-90: #ffccd5;
+  --pal-red-80: #ffa8b5;
+  --pal-red-70: #ff8091;
+  --pal-red-60: #f7596c;
+  --pal-red-50: #d72d40;
+  --pal-red-40: #a91e2e;
+  --pal-red-30: #78111c;
+  --pal-red-20: #630811;
+  --pal-red-10: #47060c;
+
   /* -------- Brand Colors -------- */
 
+  --brand-neutral-white: #ffffff;
+  --brand-neutral-light: #dbdbdb;
+  --brand-neutral-dark: #7c7c7c;
+  --brand-neutral-black: #000000;
+
   --brand-purple-lightest: #f6eaff;
+  --brand-purple-light: #deb4ff;
+  --brand-purple-mid: #6a3c98;
+  --brand-purple-dark: #500e82;
+  --brand-purple-darkest: #3d125f;
+
   --brand-blue-lightest: #d7f5ff;
+  --brand-blue-light: #88e3ff;
+  --brand-blue-mid: #005fbe;
+  --brand-blue-dark: #11258e;
+
+  --brand-teal-lightest: #dbfffd;
+  --brand-teal-light: #95ffec;
+  --brand-teal-mid: #10c0c0;
+  --brand-teal-dark: #106375;
+
   --brand-green-lightest: #dbfff3;
+  --brand-green-light: #95ffcc;
+  --brand-green-mid: #0fc382;
+  --brand-green-dark: #107557;
+
   --brand-yellow-lightest: #fff4cd;
+  --brand-yellow-light: #ffe27f;
+  --brand-yellow-mid: #ffc500;
+
   --brand-orage-light: #ffd7c9;
+  --brand-orange-mid: #ffa17f;
+  --brand-orange-dark: #ff4400;
+
+  --brand-red-light: #ffd0ec;
+  --brand-red-mid: #ff9cd8;
+  --brand-red-dark: #e5113c;
 
   /* -------- System Colors -------- */
-
-  --sys-primary-emphasized: var(--pal-purple-30);
 
   --sys-fg-base: var(--pal-neutral-10);
   --sys-fg-primary: var(--pal-purple-10);
   --sys-fg-secondary: var(--pal-neutral-40);
   --sys-fg-tertiary: var(--pal-neutral-60);
+  --sys-fg-subtle: var(--pal-neutral-70);
+  --sys-fg-minimal: var(--pal-neutral-80);
+  --sys-fg-positive: var(--pal-green-50);
+  --sys-fg-negative: var(--pal-red-50);
   --sys-fg-on-color: var(--pal-neutral-100);
+  --sys-fg-on-contrast: var(--pal-neutral-95);
   --sys-fg-on-disabled: var(--pal-neutral-70);
   --sys-fg-disabled: var(--pal-neutral-80);
 
-  --sys-bg-surface: var(--pal-neutral-100);
-  --sys-bg-minimal: var(--pal-neutral-95);
-  --sys-bg-subtle: var(--pal-neutral-93);
-  --sys-bg-moderate: var(--pal-neutral-90);
-
-  --sys-neutral-base: var(--pal-neutral-50);
+  --sys-primary-base: var(--pal-purple-40);
+  --sys-primary-emphasized: var(--pal-purple-30);
+  --sys-primary-muted: var(--pal-purple-80);
+  --sys-primary-subtle: var(--pal-purple-93);
+  --sys-primary-disabled: var(--pal-purple-95);
 
   --sys-interactive-base: var(--pal-purple-50);
   --sys-interactive-strong: var(--pal-purple-40);
+  --sys-interactive-bold: var(--pal-purple-60);
   --sys-interactive-highlight: var(--pal-purple-70);
-  --sys-interactive-minimal: var(--pal-purple-95);
-  --sys-intercative-subtle: var(--pal-purple-93);
+  --sys-interactive-muted: var(--pal-purple-80);
   --sys-interactive-moderate: var(--pal-purple-90);
+  --sys-intercative-subtle: var(--pal-purple-93);
+  --sys-interactive-minimal: var(--pal-purple-95);
+  --sys-interactive-disabled: var(--pal-neutral-90);
+
+  --sys-neutral-base: var(--pal-neutral-50);
+  --sys-neutral-strong: var(--pal-neutral-40);
+  --sys-neutral-bold: var(--pal-neutral-60);
+  --sys-neutral-muted: var(--pal-neutral-80);
+  --sys-neutral-moderate: var(--pal-neutral-90);
+  --sys-neutral-subtle: var(--pal-neutral-93);
+  --sys-neutral-minimal: var(--pal-neutral-95);
+
+  --sys-bg-surface: var(--pal-neutral-100);
+  --sys-bg-contrast: var(--pal-neutral-10);
+  --sys-bg-moderate: var(--pal-neutral-90);
+  --sys-bg-subtle: var(--pal-neutral-93);
+  --sys-bg-minimal: var(--pal-neutral-95);
+  --sys-bg-disabled: var(--pal-neutral-95);
+  --sys-bg-transparent: rgba(255, 255, 255, 0);
+
+  --sys-info-base: var(--pal-blue-50);
+  --sys-info-strong: var(--pal-blue-40);
+  --sys-info-bold: var(--pal-blue-60);
+  --sys-info-muted: var(--pal-blue-80);
+  --sys-info-moderate: var(--pal-blue-90);
+  --sys-info-subtle: var(--pal-blue-93);
+  --sys-info-minimal: var(--pal-blue-95);
+
+  --sys-warning-base: var(--pal-yellow-50);
+  --sys-warning-strong: var(--pal-yellow-40);
+  --sys-warning-bold: var(--pal-yellow-60);
+  --sys-warning-muted: var(--pal-yellow-80);
+  --sys-warning-moderate: var(--pal-yellow-90);
+  --sys-warning-subtle: var(--pal-yellow-93);
+  --sys-warning-minimal: var(--pal-yellow-95);
+
+  --sys-orange-base: var(--pal-orange-50);
+  --sys-orange-strong: var(--pal-orange-40);
+  --sys-orange-bold: var(--pal-orange-60);
+  --sys-orange-muted: var(--pal-orange-80);
+  --sys-orange-moderate: var(--pal-orange-90);
+  --sys-orange-subtle: var(--pal-orange-93);
+  --sys-orange-minimal: var(--pal-orange-95);
 
   --sys-border-minimal: var(--pal-neutral-93);
   --sys-border-subtle: var(--pal-neutral-90);
-  --sys-border-on-contrast: var(--pal-neutral-95);
   --sys-border-strong: var(--pal-neutral-80);
   --sys-border-emphasized: var(--pal-neutral-70);
-
-  --sys-warning-base: var(--pal-yellow-50);
-
-  --sys-info-base: var(--pal-blue-50);
-
-  --sys-orange-base: var(--pal-orange-50);
+  --sys-border-critical: var(--pal-red-50);
+  --sys-border-on-contrast: var(--pal-neutral-95);
+  --sys-border-inverse: var(--pal-neutral-100);
+  --sys-border-disabled: var(--pal-neutral-80);
 
   --sys-success-base: var(--pal-green-50);
+  --sys-success-strong: var(--pal-green-40);
+  --sys-success-bold: var(--pal-green-60);
+  --sys-success-muted: var(--pal-green-80);
+  --sys-success-moderate: var(--pal-green-90);
+  --sys-success-subtle: var(--pal-green-93);
+  --sys-success-minimal: var(--pal-green-95);
+
+  --sys-critical-base: var(--pal-red-50);
+  --sys-critical-strong: var(--pal-red-40);
+  --sys-critical-bold: var(--pal-red-60);
+  --sys-critical-muted: var(--pal-red-80);
+  --sys-critical-moderate: var(--pal-red-90);
+  --sys-critical-subtle: var(--pal-red-93);
+  --sys-critical-minimal: var(--pal-red-95);
+
+  --sys-turquoise-base: var(--pal-turquoise-50);
+  --sys-turquoise-strong: var(--pal-turquoise-40);
+  --sys-turquoise-bold: var(--pal-turquoise-60);
+  --sys-turquoise-muted: var(--pal-turquoise-80);
+  --sys-turquoise-moderate: var(--pal-turquoise-90);
+  --sys-turquoise-subtle: var(--pal-turquoise-93);
+  --sys-turquoise-minimal: var(--pal-turquoise-95);
 
   /* -------- Shorthands -------- */
-
-  --text-body: var(--sys-fg-base);
-  --text-primary: var(--sys-fg-primary);
-  --text-secondary: var(--sys-fg-secondary);
-  --text-on-color: var(--sys-fg-on-color);
-  --text-link: var(--sys-interactive-base);
-  --text-link-hover: var(--sys-interactive-strong);
 
   --background-primary: var(--sys-bg-surface);
   --background-secondary: var(--sys-bg-minimal);
   --background-tertiary: var(--sys-bg-subtle);
+  --background-hover: var(--sys-bg-subtle);
+  --background-active: var(--sys-bg-moderate);
   --background-selected: var(--sys-interactive-minimal);
   --background-selected-hover: var(--sys-intercative-subtle);
+  --background-contrast: var(--sys-bg-contrast);
+  --background-disabled: var(--sys-bg-disabled);
+
+  --text-primary: var(--sys-fg-primary);
+  --text-secondary: var(--sys-fg-secondary);
+  --text-tertiary: var(--sys-fg-tertiary);
+  --text-body: var(--sys-fg-base);
+  --text-helper: var(--sys-fg-secondary);
+  --text-positive: var(--sys-fg-positive);
+  --text-negative: var(--sys-fg-negative);
+  --text-link: var(--sys-interactive-base);
+  --text-link-hover: var(--sys-interactive-strong);
+  --text-on-color: var(--sys-fg-on-color);
+  --text-on-contrast: var(--sys-fg-on-contrast);
+  --text-on-disabled: var(--sys-fg-on-disabled);
+  --text-disabled: var(--sys-fg-disabled);
 
   --border-regular: var(--sys-border-subtle);
   --border-minimal: var(--sys-border-minimal);
+  --border-strong: var(--sys-border-strong);
+  --border-hover: var(--sys-border-emphasized);
+  --border-focus: var(--sys-interactive-highlight);
   --border-selected: var(--sys-interactive-base);
+  --border-error: var(--sys-border-critical);
   --border-on-contrast: var(--sys-border-on-contrast);
+  --border-disabled: var(--sys-border-disabled);
 
   --icon-primary: var(--sys-fg-primary);
   --icon-secondary: var(--sys-fg-secondary);
   --icon-tertiary: var(--sys-fg-tertiary);
+  --icon-positive: var(--sys-fg-positive);
+  --icon-negative: var(--sys-fg-negative);
   --icon-interactive: var(--sys-interactive-base);
+  --icon-interactive-hover: var(--sys-interactive-strong);
+  --icon-on-color: var(--sys-fg-on-color);
+  --icon-on-contrast: var(--sys-fg-on-contrast);
+  --icon-on-disabled: var(--sys-fg-on-disabled);
   --icon-disabled: var(--sys-fg-disabled);
 
-  --input-text-placeholder: var(--sys-fg-on-disabled);
-
-  --button-primary-fg: var(--sys-fg-on-color);
   --button-primary-bg: var(--sys-interactive-strong);
   --button-primary-bg-hover: var(--sys-primary-emphasized);
+  --button-primary-bg-active: var(--sys-fg-primary);
+  --button-primary-bg-disabled: var(--sys-primary-disabled);
+  --button-primary-fg: var(--sys-fg-on-color);
+  --button-primary-fg-hover: var(--sys-fg-on-color);
+  --button-primary-fg-active: var(--sys-fg-on-color);
+  --button-primary-fg-disabled: var(--sys-fg-on-disabled);
 
-  --button-secondary-fg: var(--sys-fg-primary);
   --button-secondary-bg: var(--sys-bg-surface);
   --button-secondary-bg-hover: var(--sys-bg-subtle);
   --button-secondary-bg-active: var(--sys-bg-moderate);
-  --button-secondary-border: var(--sys-border-strong);
-  --button-secondary-border-hover: var(--sys-border-emphasized);
-  --button-secondary-border-active: var(--sys-border-emphasized);
+  --button-secondary-bg-disabled: var(--sys-bg-minimal);
+  --button-secondary-border: 1px solid var(--sys-border-strong);
+  --button-secondary-border-hover: 1px solid var(--sys-border-emphasized);
+  --button-secondary-border-active: 1px solid var(--sys-border-emphasized);
+  --button-secondary-border-disabled: 1px solid var(--sys-border-disabled);
+  --button-secondary-fg: var(--sys-fg-primary);
+  --button-secondary-fg-hover: var(--sys-fg-primary);
+  --button-secondary-fg-active: var(--sys-fg-primary);
+  --button-secondary-fg-disabled: var(--sys-fg-disabled);
+
+  --button-tertiary-bg: var(--sys-bg-transparent);
+  --button-tertiary-bg-hover: var(--sys-bg-subtle);
+  --button-tertiary-bg-active: var(--sys-bg-moderate);
+  --button-tertiary-bg-disabled: var(--sys-bg-transparent);
+  --button-tertiary-fg: var(--sys-interactive-base);
+  --button-tertiary-fg-hover: var(--sys-interactive-strong);
+  --button-tertiary-fg-active: var(--sys-fg-primary);
+  --button-tertiary-fg-disabled: var(--sys-fg-disabled);
+
+  --button-danger-primary-bg: var(--sys-critical-base);
+  --button-danger-primary-bg-hover: var(--sys-critical-strong);
+  --button-danger-primary-bg-active: var(--sys-critical-dark);
+  --button-danger-primary-bg-disabled: var(--sys-primary-disabled);
+  --button-danger-primary-fg: var(--sys-fg-on-color);
+  --button-danger-primary-fg-hover: var(--sys-fg-on-color);
+  --button-danger-primary-fg-active: var(--sys-fg-on-color);
+  --button-danger-primary-fg-disabled: var(--sys-fg-on-disabled);
+
+  --button-danger-secondary-bg: var(--sys-bg-surface);
+  --button-danger-secondary-bg-hover: var(--sys-critical-minimal);
+  --button-danger-secondary-bg-active: var(--sys-critical-moderate);
+  --button-danger-secondary-bg-disabled: var(--sys-bg-minimal);
+  --button-danger-secondary-border: var(--sys-critical-muted);
+  --button-danger-secondary-border-hover: var(--sys-critical-muted);
+  --button-danger-secondary-border-active: var(--sys-critical-base);
+  --button-danger-secondary-border-disabled: var(--sys-border-disabled);
+  --button-danger-secondary-fg: var(--sys-critical-base);
+  --button-danger-secondary-fg-hover: var(--sys-critical-base);
+  --button-danger-secondary-fg-active: var(--sys-critical-strong);
+  --button-danger-secondary-fg-disabled: var(--sys-fg-disabled);
+
+  --button-danger-tertiary-bg: var(--sys-bg-transparent);
+  --button-danger-tertiary-bg-hover: var(--sys-critical-minimal);
+  --button-danger-tertiary-bg-active: var(--sys-critical-moderate);
+  --button-danger-tertiary-bg-disabled: var(--sys-bg-transparent);
+  --button-danger-tertiary-fg: var(--sys-critical-base);
+  --button-danger-tertiary-fg-hover: var(--sys-critical-base);
+  --button-danger-tertiary-fg-active: var(--sys-critical-strong);
+  --button-danger-tertiary-fg-disabled: var(--sys-fg-disabled);
+
+  --input-text-label: var(--sys-fg-primary);
+  --input-text-input-value: var(--sys-bg-base);
+  --input-text-placeholder: var(--sys-fg-subtle);
+  --input-text-error: var(--sys-fg-critical);
+
+  --input-checkbox-selection: var(--sys-interactive-base);
+  --input-checkbox-disabled: var(--sys-interactive-disabled);
+
+  --input-toggle-frame-on: var(--sys-success-bold);
+  --input-toggle-frame-on-disabled: #4eb76c80; /* rgba({--sys-success-bold}, 0.5) */
+  --input-toggle-frame-off: var(--sys-neutral-bold);
+  --input-toggle-frame-off-disabled: #94879b80; /* rgba({--sys-neutral-bold}, 0.5) */
+  --input-toggle-slide-on: var(--sys-bg-surface);
+  --input-toggle-slide-on-disabled: var(--sys-bg-surface);
+  --input-toggle-slide-off: var(--sys-bg-surface);
+  --input-toggle-slide-off-disabled: var(--sys-bg-surface);
+
+  --status-info-bg: var(--sys-info-minimal);
+  --status-info-bg-hover: var(--sys-info-subtle);
+  --status-info-bg-active: var(--sys-info-moderate);
+  --status-info-border: var(--sys-info-muted);
+  --status-info-icon: var(--sys-info-strong);
+  --status-info-text: var(--sys-info-strong);
+
+  --status-success-bg: var(--sys-success-minimal);
+  --status-success-bg-hover: var(--sys-success-subtle);
+  --status-success-bg-active: var(--sys-success-moderate);
+  --status-success-border: var(--sys-success-muted);
+  --status-success-icon: var(--sys-success-strong);
+  --status-success-text: var(--sys-success-strong);
+
+  --status-warning-bg: var(--sys-warning-minimal);
+  --status-warning-bg-hover: var(--sys-warning-subtle);
+  --status-warning-bg-active: var(--sys-warning-moderate);
+  --status-warning-border: var(--sys-warning-muted);
+  --status-warning-icon: var(--sys-warning-strong);
+  --status-warning-text: var(--sys-warning-strong);
+
+  --status-critical-bg: var(--sys-critical-minimal);
+  --status-critical-bg-hover: var(--sys-critical-subtle);
+  --status-critical-bg-active: var(--sys-critical-moderate);
+  --status-critical-border: var(--sys-critical-muted);
+  --status-critical-icon: var(--sys-critical-strong);
+  --status-critical-text: var(--sys-critical-strong);
+
+  --status-progress-bg: var(--sys-interactive-minimal);
+  --status-progress-bg-hover: var(--sys-interactive-subtle);
+  --status-progress-bg-active: var(--sys-interactive-moderate);
+  --status-progress-border: var(--sys-interactive-muted);
+  --status-progress-icon: var(--sys-interactive-strong);
+  --status-progress-text: var(--sys-interactive-strong);
+
+  /* -------- Utilities -------- */
+
+  --utilities-overlay: #201b22cc; /* rgba({--sys-bg-contrast}, 0.8) */
+  --utilities-overlay-light: #201b2229; /* rgba({--sys-bg-contrast}, 0.16) */
+  --utilities-overlay-side: linear-gradient(90deg, #201b2200 0%, #201b2252 100%); /* rgba({--sys-bg-contrast}, 0), rgba({--sys-bg-contrast}, 0.32) */
+  --utilities-skeleton: var(--sys-bg-subtle);
+  --utilities-skeleton-strong: var(--sys-fg-minimal);
 
   /* -------- Elevation -------- */
 
   --elevation-sm: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
   --elevation-md: 0px 2px 12px 0px rgba(0, 0, 0, 0.06);
+
+  /* -------- Typography -------- */
 
   --body-md-regular-font-size: 0.875rem; /* 14px */
   --body-md-regular-line-height: 1.25rem; /* 20px */
@@ -131,6 +425,10 @@
   --body-lg-regular-font-size: 1rem; /* 16px */
   --body-lg-regular-line-height: 1.5rem; /* 24px */
   --body-lg-regular-font-weight: 400;
+
+  --body-lg-semibold-font-size: 1rem; /* 16px */
+  --body-lg-semibold-line-height: 1.5rem; /* 24px */
+  --body-lg-semibold-font-weight: 600;
 
   --code-md-font-size: 0.75rem; /* 12px */
   --code-md-line-height: 1rem; /* 16px */
@@ -151,7 +449,16 @@
 
   --heading-h4-font-size: 1rem; /* 16px */
   --heading-h4-line-height: 1.5rem; /* 24px */
-  --heading-h4-font-weight: 600;
+  --heading-h4-font-weight: 700;
+
+  --heading-h5-font-size: 0.875rem; /* 14px */
+  --heading-h5-line-height: 1.25rem; /* 20px */
+  --heading-h5-font-weight: 700;
+
+  --heading-h6-font-size: 0.75rem; /* 12px */
+  --heading-h6-line-height: 1rem; /* 16px */
+  --heading-h6-font-weight: 700;
+  --heading-h6-letter-spacing: 0.15px;
 
   --button-sm-font-size: 0.875rem; /* 14px */
   --button-sm-line-height: 1.25rem; /* 20px */
