--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -2,6 +2,8 @@
 .theme2 .site-footer {
   display: block;
   padding: 0;
+  z-index: 2;
+  position: relative;
 
   & .inner {
     padding: 1rem 1.25rem;
@@ -9,7 +11,7 @@
     align-items: center;
     flex-direction: column-reverse;
     justify-content: center;
-    gap: 1rem
+    gap: 1rem;
   }
 
   & .copyright {
