--- a/src/css/header.css
+++ b/src/css/header.css
@@ -23,7 +23,7 @@
 }
 
 .portal .site-header-navbar .navbar-container {
-  max-width: 1440px;
+  max-width: var(--page-max-width);
   margin: 0 auto;
 }
 
