--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -1,3 +1,12 @@
+:root {
+  --portal-content-max-width: 1200px;
+}
+@media (min-width: 1200px) {
+  :root {
+    --portal-content-max-width: 100%;
+  }
+}
+
 body[data-subpage="portal"] {
   
   & > main {
@@ -13,7 +22,7 @@ body[data-subpage="portal"] {
     background: var(--background-primary);
 
     & .inner {
-      max-width: 1440px;
+      max-width: var(--page-max-width);
       margin: 0 auto;
     }
   }
@@ -103,7 +112,7 @@ body[data-subpage="portal"] {
     line-height: var(--body-md-regular-line-height);
     font-weight: var(--body-md-regular-font-weight);
     width: 100%;
-    color: var(--text-body);
+    color: var(--input-text-input-value);
   }
 
   & .portal-header .portal-header-top .portal-header-top-inner .portal-search input::placeholder {
